[build-system]
requires = ["hatchling",
"hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "Apycula"
dynamic = ["version"]
description = "Open Source tools for Gowin FPGAs"
license = ""
requires-python = ">=3.8"
authors = [
    { name = "Pepijn de Vos", email = "pepijndevos@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "crc",
]

[project.scripts]
gowin_pack = "apycula.gowin_pack:main"
gowin_pll = "apycula.gowin_pll:main"
gowin_unpack = "apycula.gowin_unpack:main"

[project.urls]
Homepage = "https://github.com/YosysHQ/apicula"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "apycula/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/apycula",
]
