[build-system]
requires = ["setuptools>=61", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Apycula"
description = "Open Source tools for Gowin FPGAs"
readme = "readme.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Pepijn de Vos", email = "pepijndevos@gmail.com" }
]
urls = { "Homepage" = "https://github.com/YosysHQ/apicula" }
dependencies = [
    "crc"
]
dynamic = ["version"]

# PEP 621 classifiers from setup.py
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.scripts]
gowin_pack = "apycula.gowin_pack:main"
gowin_unpack = "apycula.gowin_unpack:main"
gowin_pll = "apycula.gowin_pll:main"

[tool.setuptools]
packages = ["apycula"]

[tool.setuptools.package-data]
apycula = ["*.pickle"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
